--- a/index.html
+++ b/index.html
@@ -7,13 +7,21 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>SupremeBot</title>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Montserrat:500&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
         * {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
         }
-        
+
+        :root {
+            --tg-theme-text-color: #ffffff; /* Белый цвет текста */
+            --tg-theme-bg-color: #1c1c1c; /* Тёмный фон */
+            --tg-theme-button-color: #1a73e8; /* Синий цвет кнопки */
+            --tg-theme-button-text-color: #ffffff; /* Белый текст на кнопке */
+            --tg-theme-secondary-bg-color: #333333;
+        }
+
 
         body {
             font-family: 'Montserrat', sans-serif;
@@ -67,7 +75,7 @@
         <h1>Our services</h1>
         <img src="https://wallpapers.com/images/featured/supreme-up37l7u36ay074ca.jpg">
         <p>Lorem ipsum</p>
-        <button id="buy">Buy Subscription</button>>
+        <button id="buy">Buy Subscription</button>
     </div>
     <script src="https://telegram.org/js/telegram-web-app.js?56"></script>
 </body>
